# noentiendo

./: .gitignore  CMakeLists.txt
debugger/: CMakeLists.txt
debugger/inc/: debugger.hpp  input.hpp  memory_editor.hpp  renderer.hpp  window.hpp
debugger/src/: debugger.cpp  input.cpp  main.cpp  renderer.cpp  window.cpp
dependencies/: CMakeLists.txt
nes-emu/: CMakeLists.txt
nes-emu/inc/: bitfield.hpp  bus.hpp  cpu.hpp  instructions.hpp  nes.hpp
nes-emu/src/: bus.cpp  cpu.cpp  main.cpp
noentiendo/: CMakeLists.txt
noentiendo/inc/: bitfield.hpp  bus.hpp  cartridge.hpp  cpu.hpp  instructions.hpp  mapper_000.hpp  nes.hpp  util.hpp
noentiendo/src/: bus.cpp  cartridge.cpp  cpu.cpp  mapper_000.cpp
